--- a/.muttrc
+++ b/.muttrc
@@ -1,6 +1,6 @@
-##########
-# Category addressing
-##########
+#############
+# Addressing
+#############
 
 # set alias_format = '%4n %2f %t %-10a   %r'
 # set hidden_host = no
@@ -12,15 +12,15 @@
 # set reverse_realname = yes
 # set use_domain = yes
 
-##########
-# Category attachments
-##########
+##############
+# Attachments
+##############
 
 # set attach_format = '%u%D%I %t%4n %T%.40d%> [%.7m/%.10M, %.6e%?C?, %C?, %s] '
 
-##########
-# Category composing
-##########
+############
+# Composing
+############
 
 # set abort_nosubject = ask-yes
 # set abort_unmodified = yes
@@ -61,7 +61,7 @@
 # set signature = '~/.signature'
 
 ##########
-# Category crypto
+# Crypto
 ##########
 
 # set crypt_autoencrypt = no
@@ -76,7 +76,7 @@
 # set crypt_verify_sig = yes
 
 ##########
-# Category default
+# Default
 ##########
 
 # set attach_charset = '(empty)'
@@ -120,7 +120,7 @@
 # set wrap_headers = '78'
 
 ##########
-# Category display
+# Display
 ##########
 
 # set allow_ansi = no
@@ -146,22 +146,22 @@
 # set write_inc = '10'
 
 ##########
-# Category editor
+# Editor
 ##########
 
 # set escape = '~'
 # set visual = '(empty)'
 
-##########
-# Category essential
-##########
+############
+# Essential
+############
 
-# set alias_file = '~/.muttrc'
-# set folder = '~/Mail'
-set from = 'nospam@nospam.com' # default: '(empty)'
+set alias_file = '~/.muttrc'
+set folder = '~/Mail'
+set from = 'craige@mcwhirter.io'
 
 ##########
-# Category folders
+# Folders
 ##########
 
 # set confirmappend = yes
@@ -179,7 +179,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set spoolfile = '(empty)'
 
 ##########
-# Category imap
+# imap
 ##########
 
 # set imap_authenticators = '(empty)'
@@ -197,7 +197,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set imap_user = '(empty)'
 
 ##########
-# Category mh
+# mh
 ##########
 
 # set mh_purge = no
@@ -206,7 +206,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set mh_seq_unseen = 'unseen'
 
 ##########
-# Category network
+# Network
 ##########
 
 # set connect_timeout = '30'
@@ -216,12 +216,12 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set use_ipv6 = yes
 
 ##########
-# Category nntp
+# NNTP
 ##########
 
 
 ##########
-# Category patches
+# Patches
 ##########
 
 # set history_file = '~/.mutthistory'
@@ -230,7 +230,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set smtp_url = '(empty)'
 
 ##########
-# Category pgp
+# PGP
 ##########
 
 # set pgp_auto_decode = no
@@ -264,7 +264,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set pgp_verify_key_command = '(empty)'
 
 ##########
-# Category pop3
+# pop3
 ##########
 
 # set pop_auth_try_all = yes
@@ -278,7 +278,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set pop_user = '(empty)'
 
 ##########
-# Category reading
+# Reading
 ##########
 
 # set assumed_charset = '(empty)'
@@ -312,7 +312,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set wrapmargin = '0'
 
 ##########
-# Category sending
+# Sending
 ##########
 
 # set allow_8bit = yes
@@ -340,7 +340,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set write_bcc = yes
 
 ##########
-# Category smime
+# SMIME
 ##########
 
 # set smime_ask_cert_label = yes
@@ -365,7 +365,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set smime_verify_opaque_command = '(empty)'
 
 ##########
-# Category sorting
+# Sorting
 ##########
 
 # set sort = 'date'
@@ -375,7 +375,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set sort_re = yes
 
 ##########
-# Category ssl
+# SSL
 ##########
 
 # set certificate_file = '~/.mutt_certificates'
@@ -391,7 +391,7 @@ set from = 'nospam@nospam.com' # default: '(empty)'
 # set ssl_usesystemcerts = yes
 
 ##########
-# Category system
+# System
 ##########
 
 # set beep = yes
